
  - non-English translations of error messages are now provided
    in a separate PO file (e.g., for use with GNU gettext),
    jbg_strerror() no longer has a language attribute and the
    JBG_EN, JBG_DE_8859_1, JBG_DE_UTF_8 constants no longer exist

  - pbmtojbg has new option -f as a shortcut for all the options
    needed to make the output comply to the basic ITU-T T.85 fax
    profile

Changes in version 1.6 (2004-06-11)

  - various small changes to reduce the risk of 32-bit unsigned
    integer overflows when dealing with extremely large images

  - robuster treatment of L0 = 0xffffffff

  - minor API modification in jbg_enc_options(): parameter l0 changed
    from type long to unsigned long; previous value now remains
    unchanged when l0 == 0 (was: l0 < 0)

  - lots of type casts added such that the C source code is now
    also compilable as C++

Changes in version 1.5 (2003-06-11)

  - fixed two minor memory leaks (special thanks to Davide Pizzolato
    <ing.davide.pizzolato@libero.it> for locating one of these)

  - jbgtopbm does not attempt any more to parse multiple concatenated
    BIEs (options -m must be used now to enable this feature explicitly),
    in order to handle BIEs with data after the last expected SDE gracefully

  - various extensions to improve support of JBIG fax applications
    (ITU-T T.85 profile):

      o support for maximum adaptive template pixel offset increased
        to MX=127 in both encoder and decoder

      o encoder now has a hook for producing BIEs with a NEWLEN marker
        segment and VLENGTH=1, in order to assist in testing decoders
        for T.85 conformance (see also new pbmtojbg option -Y)

      o a new function jbg_newlen() can be used to scan an
        entire in-memory BIE for NEWLEN marker segments and update the
        YD value in the BIE header, which can be applied to BIE data
        before passing it to the decoder for T.85 compliance