@@ -1,4 +1,5 @@
 P5
-2 2
+         2
+         2
 4294967295
 abcdABCD9876WXYZ
